## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = libcheckjson.la
libcheckjson_la_SOURCES = check_json.h \
			check_json.c \
			common.h \
			check_json_new.h \
			check_json_new.c \
			check_json_array.h \
			check_json_array.c \
			check_json_misc.h \
			check_json_misc.c \
			check_json_object.h \
			check_json_object.c \
			$(top_builddir)/src/json.h