## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = libcheckjsonrpc.la
libcheckjsonrpc_la_SOURCES = check_json_rpc.h \
			check_json_rpc.c \
			common.h \
			check_json_rpc_process.h \
			check_json_rpc_process.c \
			check_json_rpc_over_http.h \
			check_json_rpc_over_http.c \
			json_rpc_check_util.h \
			json_rpc_check_util.c \
			$(top_builddir)/src/json_rpc.h